plugins{
    id 'java'
    id 'org.springframework.boot' version '2.7.9'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
    id 'application'
}
allprojects{
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'application'
    apply from  : "${rootDir}/dependencies.gradle"
}
subprojects{
    group = 'com.group'
    version = 'v.0.1'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    tasks.withType(JavaCompile){
        options.encoding = 'UTF-8'
    }
}
allprojects{
    repositories{
        mavenCentral()
        google()
    }
    buildscript{
        repositories{
            mavenCentral()
        }
    }
    dependencies{
        implementation libs.springBootWeb
        compileOnly libs.lombok
        annotationProcessor libs.lombok
        annotationProcessor libs.mapstructProcessor
        implementation libs.mapstruct
        implementation libs.swaggerui
        implementation libs.springBootValidation
        implementation libs.springCloudConfigClient

       /* implementation libs.jwt//       */
    }
}

configurations{
    compileOnly{
        extendsFrom annotationProcessor
    }
}
